# cpp-2021

./: CMakeLists.txt
lab01/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
lab02/: Point.cpp  Point.h  main.cpp
lab03/: List.cpp  List.h  Stack.cpp  Stack.h  main.cpp
lab04/: Point.cpp  Point.h  PointSet.cpp  PointSet.h  main.cpp
lab05/: Matrix.cpp  Matrix.h  main.cpp
lab06/: Account.h  Bank.cpp  Bank.h  CMakeLists.txt  Customer.cpp  Customer.h  Polynomial.cpp  Polynomial.h  main.cpp
lab07/: Account.cpp  Bank.cpp  Bank.h  CMakeLists.txt  customers.txt  main.cpp
lab07extra/: BST.h  CMakeLists.txt  NodeBST.cpp  NodeBST.h  main.cpp
lab09/: main.cpp
lab10_1/: Alkalmazott.cpp  Alkalmazott.h  CMakeLists.txt  Ceg.cpp  Ceg.h  Manager.cpp  Manager.h  Szemely.cpp  Szemely.h  main.cpp
lab11/: CMakeLists.txt  Index.cpp  Index.h  main.cpp
lab12/: OrderedList.h  main.cpp
